--- a/style.css
+++ b/style.css
@@ -6,3 +6,16 @@ body,
   height: 100%;
   width: 100%;
 }
+
+#layer-list-btn ,#basemap-gallery-btn {
+  padding: 7px 8px;
+  cursor: pointer;
+}
+
+div.esri-component.esri-layer-list.esri-widget.esri-widget--panel {
+display: none;
+}
+
+div.esri-component.esri-basemap-gallery.esri-widget.esri-widget--panel-height-only {
+  display: none;
+}
